--- a/Codepoursuite.html
+++ b/Codepoursuite.html
@@ -29,16 +29,10 @@
             <li><a href="a-propos.html">À propos</a></li>
         </ul>
     </nav>
-    <div class="logo">
-        <img src="img/dc.png" height="74" width="94">
-    </div>
+    <div class="logo"><img src="img/dc.png" height="74" width="94"></div>
     <div class="fond_header"></div>
-    <div class="titre_projet">
-        <p>Data Code</p>
-    </div>
-    <div class="titre_projet2">
-        <p>Un clic ! c'est tout !</p>
-    </div>
+    <div class="titre_projet"><p>Data Code</p></div>
+    <div class="titre_projet2"><p>Un clic ! c'est tout !</p></div>
 </header>
 
 
@@ -56,31 +50,23 @@
     <h1>Benjamin le hacker</h1>
     <p>Orphelin de 13 ans au Danemark, il recherche sa mère qu’il pensait décéder
         lors d’un accident de la route. Il n’était jusque-là pas une menace. Mais
-        heureusement que la technologie existe.
-    </p>
+        heureusement que la technologie existe.</p>
     <h2>Benjamin : jamais sans son ordinateur, est un jeune pirate informatique à
-    la recherche de sa mère
-    </h2>
+    la recherche de sa mère</h2>
         <div class="texte1">
-        <p>
-        Internet fait partie de ton quotidien, que ce soit pour faire des
+        <p>Internet fait partie de ton quotidien, que ce soit pour faire des
         recherches ou bien jouer à des jeux. Comme pour Benjamin, le héros du film
         « Code Poursuite ». On remarque que dans ce film, Benjamin se sert
         d’internet, pour les réseaux sociaux ou bien pour hacker des systèmes. Il
         est très fort pour hacker les ordinateurs, il a par exemple utilisé ses
         compétences informatiques afin de changer ses résultats scolaires lors d’un
-        test, pour lui et pour ses camarades de classe.
-        </p>
-        </div>
+        test, pour lui et pour ses camarades de classe.</p></div>
 </div>
 
 <div class="partie2">
-    <div class="img3">
-        <img src="img/codepoursuite/ben.png" width="375" height="270">
-        <p>Benjamin qui utilise son ordinateur, Google Image</p>
-    </div>
-    <div class="texte2">
-        <p>Il ne s’est pas seulement contenté de changeait ses notes, il a également
+    <div class="img3"><img src="img/codepoursuite/ben.png" width="375" height="270">
+        <p>Benjamin qui utilise son ordinateur, Google Image</p></div>
+    <p>Il ne s’est pas seulement contenté de changeait ses notes, il a également
         hacker les services secrets danois afin de télécharger beaucoup de dossiers
         confidentiels. Ses dossiers contenaient des informations importantes sur sa
         mère qu’il pensait décédé, jusqu’à ce les services policiers danois lui
@@ -89,16 +75,13 @@
         poursuivre. Car au final, ils sont tous à la recherche de la même personne,
         Anna la mère de Benjamin. Malgré cela, Benjamin et son amie Savannah, ont
         fui les services secrets. Ils n'ont pas hésiter à jeter leurs portables
-        afin que personnes ne puissent les traquer.
-        </p>
-    </div>
+        afin que personnes ne puissent les traquer.</p>
 </div>
 
 <div class="partie3">
     <div class="img4">
      <img src="img/codepoursuite/codage.jpg" width="375" height="270">
-     <p>Benjamin pirate l’ordinateur de sa professeur, Capture d'écran du film Code Poursuite</p>
-    </div>
+     <p>Benjamin pirate l’ordinateur de sa professeur, Capture d'écran du film Code Poursuite</p></div>
     <h2>Cependant, Benjamin pollue sans le savoir</h2>
     <p>Le personnage principal pollue avec le numérique tout le long du film. On
         peut voir qu’il laisse constamment ses appareils connectés et branchés et
@@ -112,14 +95,11 @@
         numérique. Dans le film, on peut le voir souvent sur son ordinateur ainsi
         que son téléphone, on remarque que les WIFI ou données cellulaires ne sont
         pas déconnecter. Enfin, pour ne pas se faire traquer, Benjamin jette des
-        appareils électriques qui sont en bon états.
-    </p>
+        appareils électriques qui sont en bon états.</p>
 </div>
 
 <div class="partie4">
-    <div class="img5">
-        <img src="img/codepoursuite/telephones.jpg" width="375" height="270">
-    </div>
+    <div class="img5"><img src="img/codepoursuite/telephones.jpg" width="375" height="270"></div>
     <div class="leg4">Benjamin jette son téléphone ainsi que celui de son amie alors qu’ils sont fonctionnels,</div>
     <div class="leg4_2">Capture d'écran du film Code Poursuite</div>
     <p>Mais comme on peut le voir, ce n’est pas le seul à polluer, les services
@@ -127,19 +107,14 @@
         dossiers sur leurs appareils, téléchargent des codes pour leur plan final
         qui consiste à changer les pensées des gens. De plus, ils possèdent des
         machines qui utilisent pour tester chaque code jusqu’à trouver le bon qui
-        leur permettraient d’obtenir leur résultat voulu.
-    </p>
-    <div class="img6">
-        <img src="img/codepoursuite/integration.png" width="375" height="270">
-        <p>Algorithme écrit sur un ordinateur, Pintesrest</p>
-    </div>
+        leur permettraient d’obtenir leur résultat voulu.</p>
+    <div class="img6"><img src="img/codepoursuite/integration.png" width="375" height="270">
+        <p>Algorithme écrit sur un ordinateur, Pintesrest</p></div>
 </div>
 
 <div class="bande_annonce">
     <h3>Bande annonce de Code Poursuite:</h3>
-    <div class="video">
-        <iframe width="375" height="211" src="https://www.youtube.com/embed/D1sDT-KYgYM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
+    <div class="video"><iframe width="375" height="211" src="https://www.youtube.com/embed/D1sDT-KYgYM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 </div>
 
 <div class="galerie">
@@ -188,18 +163,10 @@
 
 <footer>
     <div class="fond_footer"></div>
-    <div class="nom_prenom">
-        <p>Nina BELLINO A1</p>
-    </div>
-    <div class="mailto">
-        <a href="mailto:nina.bellin06@gmail"><p>nina.bellin06@gmail.com</p></a>
-    </div>
-    <div class="projet">
-        <p>Projet réalisé dans le cadre d'un exercice pédagogique au département MMI de Montbéliard</p>
-    </div>
-    <div class="mmi_montbe">
-        <a href="http://mmimontbeliard.com/"><p>MMI Montbéliard</p></a>
-    </div
+    <div class="nom_prenom"><p>Nina BELLINO A1</p></div>
+    <div class="mailto"><a href="mailto:nina.bellin06@gmail"><p>nina.bellin06@gmail.com</p></a></div>
+    <div class="projet"><p>Projet réalisé dans le cadre d'un exercice pédagogique au département MMI de Montbéliard</p></div>
+    <div class="mmi_montbe"><a href="http://mmimontbeliard.com/"><p>MMI Montbéliard</p></a></div
 </footer>
 </body>
 </html>
