--- a/Pollution.html
+++ b/Pollution.html
@@ -29,47 +29,37 @@
             <li><a href="a-propos.html">À propos</a></li>
         </ul>
     </nav>
-    <div class="logo">
-        <img src="img/dc.png" height="74" width="94">
-    </div>
+    <div class="logo"><img src="img/dc.png" height="74" width="94"></div>
     <div class="fond_header"></div>
-    <div class="titre_projet">
-        <p>Data Code</p>
-    </div>
-    <div class="titre_projet2">
-        <p>Un clic ! c'est tout !</p>
-    </div>
+    <div class="titre_projet"><p>Data Code</p></div>
+    <div class="titre_projet2"><p>Un clic ! c'est tout !</p></div>
 </header>
 
 <div class="part1">
     <div class="terre-img"><img src="img/pollution/earth.png" width="375" height="666"></div>
     <h1>Pollution numérique</h1>
     <div class="sous-titre2"><p>Le numérique est responsable de près de 4% des émissions de gaz à effet de serre dans le monde, d’après l’ADEME .</p></div>
-    <div class="inter-titre2_1"><p>Savais-tu qu'internet pollue?</p></div>
-    <div class="art-1"><p>
-        Encore aujourd'hui, peu de personnes le savent, mais le numérique est un
+    <h2>Savais-tu qu'internet pollue?</h2>
+    <p>Encore aujourd'hui, peu de personnes le savent, mais le numérique est un
         domaine très polluant. Il y aurait environ 4.1 milliards d'utilisateurs
         avec 34 milliards d'appareils numériques. Lorsque nous parlons de la
         pollution numérique nous incluant la fabrication des appareils électriques,
         l'utilisation de chaque usager ainsi que les déchets numériques. Les
         émissions de gaz à effet de serre du au domaine du numérique font 25% des
         infrastructures réseau, 25% des data center et 47% des équipements des
-        consommateurs.</p></div>
+        consommateurs.</p>
 </div>
 
 <div class="part2">
-    <div class="data-center"><img src="img/pollution/data-center.png" width="375" height="250"></div>
-    <div class="legd1"><p>Benjamin qui utilise son ordinateur, Google Image</p></div>
-    <div class="art-2">Internet est composé de nombreux équipements informatiques, qui permettent
+    <div class="data-center"><img src="img/pollution/data-center.png" width="375" height="250"><p>Benjamin qui utilise son ordinateur, Google Image</p></div>
+    <p>Internet est composé de nombreux équipements informatiques, qui permettent
         de stocker et de transférer des données. Les objets numériques produisent
         des émissions de CO₂. C’est ce qu’on appelle le poids carbone. De plus, un
         simple ordinateur est considérablement composé d’éléments, principalement
         avec du plastique. C’est-à-dire qu’il contribue à la pollution plastique
-        ainsi qu’à la pollution numérique.</div>
-    <div class="ordi_vue"><img src="img/pollution/ordi_vue.png" width="279" height="174"></div>
-    <div class="legd2"><p>Composition d'un ordinateur,</p></div>
+        ainsi qu’à la pollution numérique.</p>
+    <div class="ordi_vue"><img src="img/pollution/ordi_vue.png" width="279" height="174"><p>Composition d'un ordinateur,</p></div>
     <div class="legd3"><p>Google Image</p></div>
-
     <div class="art-3">Pour te donner un exemple, 8 à 10 milliards de mails sont échangés en 1
         heure. Tous les mails que tu possèdes reste stockés dans les data center,
         donc ils prennent de la place et polluent en même temps. Si en plus, tu
@@ -79,11 +69,9 @@
 </div>
 
 <div class="part3">
-    <div class="inter"><img src="img/pollution/inter.png" width="375" height="231"></div>
-    <div class="legd4">Parcours d'un mail, Google Image</div>
-
-    <div class="inter-titre2_2">La vie de notre planète se dégrade</div>
-    <div class="art-4">
+    <div class="inter"><img src="img/pollution/inter.png" width="375" height="231"><p>Parcours d'un mail, Google Image</p></div>
+    <h2 class="inter-titre2_2">La vie de notre planète se dégrade</h2>
+    <p>
         "La pollution numérique est une pollution invisible qui grandit à une
         vitesse vertigineuse. Elle est la conséquence directe de la digitalisation
         de nos sociétés." d'après le fondateur de Cleanfox, Edouard Nattée.
@@ -95,31 +83,25 @@
         eux, vont polluer deux à trois fois plus que toi. Car, comme tu t’en
         doutes, plus on a d'appareils connectés, plus on utilise internet ou tout
         simplement ses appareils et donc on pollue plus. Aujourd’hui 3 français sur
-        4 ont un téléphone, avec 98% des 18-24ans.</div>
+        4 ont un téléphone, avec 98% des 18-24ans.</p>
 </div>
 
 <div class="part4">
-    <div class="jeunes"><img src="img/pollution/jeune.png" width="375" height="181"></div>
-    <div class="legd5">Groupe d’adolescent avec leurs téléphones, Google Image</div>
+    <div class="jeunes"><img src="img/pollution/jeune.png" width="375" height="181"><p>Groupe d’adolescent avec leurs téléphones, Google Image</p></div>
     <div class="art-5">Il y a encore énormément de système qui pollue, comme le streaming, ou bien
         les applications qui réunissent des vidéos comme Netflix et YouTube, de
         plus, les réseaux sociaux, les commandes faites sur internet, le
         e-commerce, polluent également, ainsi que les recherches sur Google et
         chaque messages /vidéos envoyés.</div>
-    <div class="phone"><img src="img/pollution/phone.png" width="375" height="812"></div>
-    <div class="legd6">Applications installés sur téléphone, Google Image</div>
+    <div class="phone"><img src="img/pollution/phone.png" width="375" height="812"><p>Applications installés sur téléphone, Google Image</p></div>
 </div>
 
 <div class="part5">
-<div class="t-inter">Tu peux à présent visionner l'interview, réalisé dans le cadre d'un
+    <p>Tu peux à présent visionner l'interview, réalisé dans le cadre d'un
         exercice pédagogique au département MMi de Montbéliard, sur la thématique
-        de The Dark Side of The Web.</div>
-<div class="vid-inter">
-    <img src="img/pollution/vid.png" width="375" height="453">
-</div>
-<div class="play">
-    <img src="img/pollution/play.png" width="89" height="89">
-</div>
+        de The Dark Side of The Web.</p>
+    <div class="vid-inter"><img src="img/pollution/vid.png" width="375" height="453"></div>
+    <div class="play"><img src="img/pollution/play.png" width="89" height="89"></div>
 </div>
 
 
@@ -133,15 +115,9 @@
     <div class="nom_prenom">
         <p>Nina BELLINO A1</p>
     </div>
-    <div class="mailto">
-        <a href="mailto:nina.bellin06@gmail"><p>nina.bellin06@gmail.com</p></a>
-    </div>
-    <div class="projet">
-        <p>Projet réalisé dans le cadre d'un exercice pédagogique au département MMI de Montbéliard</p>
-    </div>
-    <div class="mmi_montbe">
-        <a href="http://mmimontbeliard.com/"><p>MMI Montbéliard</p></a>
-    </div
+    <div class="mailto"><a href="mailto:nina.bellin06@gmail"><p>nina.bellin06@gmail.com</p></a></div>
+    <div class="projet"><p>Projet réalisé dans le cadre d'un exercice pédagogique au département MMI de Montbéliard</p></div>
+    <div class="mmi_montbe"><a href="http://mmimontbeliard.com/"><p>MMI Montbéliard</p></a></div
 </footer>
 </body>
 </html>
