--- a/Solutions.html
+++ b/Solutions.html
@@ -29,16 +29,10 @@
             <li><a href="a-propos.html">À propos</a></li>
         </ul>
     </nav>
-    <div class="logo">
-        <img src="img/dc.png" height="74" width="94">
-    </div>
+    <div class="logo"><img src="img/dc.png" height="74" width="94"></div>
     <div class="fond_header"></div>
-    <div class="titre_projet">
-        <p>Data Code</p>
-    </div>
-    <div class="titre_projet2">
-        <p>Un clic ! c'est tout !</p>
-    </div>
+    <div class="titre_projet"><p>Data Code</p></div>
+    <div class="titre_projet2"><p>Un clic ! c'est tout !</p></div>
 </header>
 
 <div class="haut-imgs">
@@ -52,37 +46,35 @@
     <h1>Moins polluer autrement</h1>
     <div class="sous-titre3_1">Nous pouvons réduire notre empreinte de carbone en seulement quelques gestes simples.</div>
     <h2>Des solutions sont à envisagés !</h2>
-    <div class="parg1">Proposons à Benjamin et son entourage plusieurs solutions afin qu'ils ne
+    <p> Proposons à Benjamin et son entourage plusieurs solutions afin qu'ils ne
         polluent moins. Ils peuvent commencer par débrancher leurs appareils
         lorsqu’ils non plus besoins d’être chargé, éteindre les appareils qui ne
         leur servent pas (la nuit surtout), c’est consommer dans le vide. Pour
         Benjamin, il est primordial qu’il n’achète pas en plusieurs exemplaires ses
-        équipements numériques.</div>
-    <div class="parg2">En même temps, ce serait une bonne initiative de fermer les onglets
-        d’internet qu'il n'utilise plus.</div>
-    <div class="parg3">Lorsqu’il quitte son domicile, il faudrait qu’il pense à éteindre sa box
+        équipements numériques.</p>
+    <div class="parg2"><p>En même temps, ce serait une bonne initiative de fermer les onglets
+            d’internet qu'il n'utilise plus.</p></div>
+    <div class="parg3"><p>Lorsqu’il quitte son domicile, il faudrait qu’il pense à éteindre sa box
         internet au lieu de la laisser en marche 24h/24. Alors que Benjamin achète
         en plusieurs exemplaires ses appareils, ils les jettent, ce qu’il ne
         faudrait pas faire surtout si ces appareils sont encore fonctionnels.
         Enfin, pour lui et son entourage, ils doivent arrêter de télécharger des
         dossiers qui vont rester sur leurs ordinateurs et dont ils n’ont pas
         besoins. Par la suite, ils devraient trier leurs dossiers sur leurs
-        machines, les supprimer si nécessaires.</div>
+        machines, les supprimer si nécessaires.</div></div>
 </div>
 
 <div class="par2">
-    <div class="mac"><img src="img/Solutions/affichage.png" height="228" width="375"></div>
-    <div class="lgd1">Exemples de dossiers télécharger sur un ordinateur, Google Image</div>
-    <div class="parg4">Peut-être que Benjamin ne connaissez pas l'importance de la pollution
+    <div class="mac"><img src="img/Solutions/affichage.png" height="228" width="375"><p class="lgd1">Exemples de dossiers télécharger sur un ordinateur, Google Image</p></div>
+    <p>Peut-être que Benjamin ne connaissez pas l'importance de la pollution
         numérique. En France, c’est 40% des français qui affirment y être
-        sensibilisé, en 2019, mais elle reste encore floue pour certains.</div>
+        sensibilisé, en 2019, mais elle reste encore floue pour certains.</p>
 </div>
 
 <div class="par3">
-    <div class="quest"><img src="img/Solutions/quest.png" height="812" width="375"></div>
-    <div class="lgd2">Exemples de dossiers télécharger sur un ordinateur, Google Image</div>
+    <div class="quest"><img src="img/Solutions/quest.png" height="812" width="375"><p>Exemples de dossiers télécharger sur un ordinateur, Google Image</p></div>
     <h2>Il existe encore des solutions qui pourrait t'aider</h2>
-    <div class="petit-titr">Tu commencer par faire ce qui va être énoncer prochainement:</div>
+    <p>Tu commencer par faire ce qui va être énoncer prochainement:</p>
     <div class="list">
         <ul>
             <li>Acheter ses matériaux reconditionner, en cas de panne, il vaut mieux faire réparer ses appareils que d'en acheter
@@ -99,7 +91,6 @@
 <div class="par4">
     <div class="anciens-tels"><img src="img/Solutions/anciens-tels.jpg" height="281" width="375">
     <p>Les téléphones qui restent dans tes tiroirs, Google Image</p></div>
-
     <div class="list2">
         <ul>
             <li>Limite le nombre d'applications et de logiciels sur tes appareils.</li>
@@ -117,8 +108,7 @@
 </div>
 
 <div class="par5">
-    <div class="firefox"><img src="img/Solutions/firefox.png" height="329" width="375"></div>
-    <div class="lgd4">Site Web Cleanfox, Google Image</div>
+    <div class="firefox"><img src="img/Solutions/firefox.png" height="329" width="375"><p>Site Web Cleanfox, Google Image</p></div>
     <div class="list3">
         <ul>
             <li>Privilégie des moteurs de recherches qui sont engagées.</li>
@@ -128,8 +118,7 @@
         pour lutter contre la déforestation. Lilo, un moteur de recherche solidaire
         qui finance gratuitement les projets que tu as choisis, il en existe encore
         d'autres.</p>
-    <div class="ecosia"><img src="img/Solutions/ecosia.png" height="324" width="375"></div>
-    <div class="lgd5">Moteur de recherche écosia, Google Image</div>
+    <div class="ecosia"><img src="img/Solutions/ecosia.png" height="324" width="375"><p>Moteur de recherche écosia, Google Image</p></div>
 </div>
 
 
@@ -140,18 +129,10 @@
 
 <footer>
     <div class="fond_footer"></div>
-    <div class="nom_prenom">
-        <p>Nina BELLINO A1</p>
-    </div>
-    <div class="mailto">
-        <a href="mailto:nina.bellin06@gmail"><p>nina.bellin06@gmail.com</p></a>
-    </div>
-    <div class="projet">
-        <p>Projet réalisé dans le cadre d'un exercice pédagogique au département MMI de Montbéliard</p>
-    </div>
-    <div class="mmi_montbe">
-        <a href="http://mmimontbeliard.com/"><p>MMI Montbéliard</p></a>
-    </div
+    <div class="nom_prenom"><p>Nina BELLINO A1</p></div>
+    <div class="mailto"><a href="mailto:nina.bellin06@gmail"><p>nina.bellin06@gmail.com</p></a></div>
+    <div class="projet"><p>Projet réalisé dans le cadre d'un exercice pédagogique au département MMI de Montbéliard</p></div>
+    <div class="mmi_montbe"><a href="http://mmimontbeliard.com/"><p>MMI Montbéliard</p></a></div
 </footer>
 </body>
 </html>
