--- a/a-propos.html
+++ b/a-propos.html
@@ -29,22 +29,14 @@
             <li><a href="a-propos.html">À propos</a></li>
         </ul>
     </nav>
-    <div class="logo">
-        <img src="img/dc.png" height="74" width="94">
-    </div>
+    <div class="logo"><img src="img/dc.png" height="74" width="94"></div>
     <div class="fond_header"></div>
-    <div class="titre_projet">
-        <p>Data Code</p>
-    </div>
-    <div class="titre_projet2">
-        <p>Un clic ! c'est tout !</p>
-    </div>
+    <div class="titre_projet"><p>Data Code</p></div>
+    <div class="titre_projet2"><p>Un clic ! c'est tout !</p></div>
 </header>
 
-<div class="class">
-    <img src="img/apropos/class.png" height="276" width="375" ">
-</div>
-<div class="present">
+<div class="debut">
+    <div class="class"><img src="img/apropos/class.png" height="276" width="375" "></div>
     <p>
         Bonjour, je suis une étudiante au département MMI, Métiers du Multimédia et
         de l’Internet, de Montbéliard. J’ai créé ce site pour un projet lors ma de
@@ -55,21 +47,10 @@
         l’utilisateur en apprend sur la pollution numérique il peut en même temps
         découvrir un film .
     </p>
+    <div class="machine"><img src="img/apropos/machine.png" height="812" width="375" "></div>
+    <h1>Contact moi</h1>
+    <div class="edit"><img src="img/apropos/edit.png" height="83" width="83" "></div>
 </div>
-
-<div class="machine">
-    <img src="img/apropos/machine.png" height="812" width="375" ">
-</div>
-<div class="contact-moi">
-    <p>
-        Contact moi
-    </p>
-</div>
-<div class="edit">
-    <img src="img/apropos/edit.png" height="83" width="83" ">
-</div>
-<div class="rect-violet"></div>
-
 
 <div class="wrap">
     <div class="contact-form">
@@ -86,23 +67,12 @@
     </div>
 </div>
 
-
-
-
 <footer>
     <div class="fond_footer"></div>
-    <div class="nom_prenom">
-        <p>Nina BELLINO A1</p>
-    </div>
-    <div class="mailto">
-        <a href="mailto:nina.bellin06@gmail"><p>nina.bellin06@gmail.com</p></a>
-    </div>
-    <div class="projet">
-        <p>Projet réalisé dans le cadre d'un exercice pédagogique au département MMI de Montbéliard</p>
-    </div>
-    <div class="mmi_montbe">
-        <a href="http://mmimontbeliard.com/"><p>MMI Montbéliard</p></a>
-    </div
+    <div class="nom_prenom"><p>Nina BELLINO A1</p></div>
+    <div class="mailto"><a href="mailto:nina.bellin06@gmail"><p>nina.bellin06@gmail.com</p></a></div>
+    <div class="projet"><p>Projet réalisé dans le cadre d'un exercice pédagogique au département MMI de Montbéliard</p></div>
+    <div class="mmi_montbe"><a href="http://mmimontbeliard.com/"><p>MMI Montbéliard</p></a></div
 </footer>
 </body>
 </html>
