final réglage de problèmes

--- a/a-propos.html
+++ b/a-propos.html
@@ -29,14 +29,16 @@
             <li><a href="a-propos.html">À propos</a></li>
         </ul>
     </nav>
-    <div class="logo"><img src="img/dc.png" height="74" width="94"></div>
+    <div class="logo"><a href="index.html"><img src="img/dc.png" height="74" width="94"></a></div>
     <div class="fond_header"></div>
     <div class="titre_projet"><p>Data Code</p></div>
     <div class="titre_projet2"><p>Un clic ! c'est tout !</p></div>
 </header>
 
-<div class="debut">
-    <div class="class"><img src="img/apropos/class.png" height="276" width="375" "></div>
+<div class="class">
+    <img src="img/apropos/class.png" height="276" width="375" ">
+</div>
+<div class="present">
     <p>
         Bonjour, je suis une étudiante au département MMI, Métiers du Multimédia et
         de l’Internet, de Montbéliard. J’ai créé ce site pour un projet lors ma de
@@ -47,10 +49,17 @@
         l’utilisateur en apprend sur la pollution numérique il peut en même temps
         découvrir un film .
     </p>
-    <div class="machine"><img src="img/apropos/machine.png" height="812" width="375" "></div>
-    <h1>Contact moi</h1>
-    <div class="edit"><img src="img/apropos/edit.png" height="83" width="83" "></div>
 </div>
+
+<div class="machine">
+    <img src="img/apropos/machine.png" height="812" width="375" ">
+</div>
+<div class="contact-moi">
+    <p>Contact moi</p>
+</div>
+<div class="edit"><img src="img/apropos/edit.png" height="83" width="83" "></div>
+<div class="rect-violet"></div>
+
 
 <div class="wrap">
     <div class="contact-form">
@@ -66,6 +75,9 @@
         </div>
     </div>
 </div>
+
+
+
 
 <footer>
     <div class="fond_footer"></div>
