--- a/index.html
+++ b/index.html
@@ -30,16 +30,10 @@
             <li><a href="a-propos.html">À propos</a></li>
         </ul>
     </nav>
-    <div class="logo">
-        <img src="img/dc.png" height="74" width="94">
-    </div>
+    <div class="logo"><img src="img/dc.png" height="74" width="94"></div>
     <div class="fond_header"></div>
-    <div class="titre_projet">
-        <p>Data Code</p>
-    </div>
-    <div class="titre_projet2">
-        <p>Un clic ! c'est tout !</p>
-    </div>
+    <div class="titre_projet"><p>Data Code</p></div>
+    <div class="titre_projet2"><p>Un clic ! c'est tout !</p></div>
 </header>
 
 <div class="image1">
@@ -97,19 +91,10 @@
 
 <footer>
     <div class="fond_footer"></div>
-    <div class="nom_prenom">
-        <p>Nina BELLINO A1</p>
-    </div>
-    <div class="mailto">
-        <a href="mailto:nina.bellin06@gmail"><p>nina.bellin06@gmail.com</p></a>
-    </div>
-    <div class="projet">
-        <p>Projet réalisé dans le cadre d'un exercice pédagogique au département MMI de Montbéliard</p>
-    </div>
-    <div class="mmi_montbe">
-        <a href="http://mmimontbeliard.com/"><p>MMI Montbéliard</p></a>
-    </div
+    <div class="nom_prenom"><p>Nina BELLINO A1</p></div>
+    <div class="mailto"><a href="mailto:nina.bellin06@gmail"><p>nina.bellin06@gmail.com</p></a></div>
+    <div class="projet"><p>Projet réalisé dans le cadre d'un exercice pédagogique au département MMI de Montbéliard</p></div>
+    <div class="mmi_montbe"><a href="http://mmimontbeliard.com/"><p>MMI Montbéliard</p></a></div
 </footer>
-
 </body>
 </html>
