--- a/article-scientifique.html
+++ b/article-scientifique.html
@@ -29,7 +29,7 @@
             <li><a href="a-propos.html">À propos</a></li>
         </ul>
     </nav>
-    <div class="logo"><img src="img/dc.png" height="74" width="94"></div>
+    <div class="logo"><a href="index.html"><img src="img/dc.png" height="74" width="94"></a></div>
     <div class="fond_header"></div>
     <div class="titre_projet"><p>Data Code</p></div>
     <div class="titre_projet2"><p>Un clic ! c'est tout !</p></div>
