mise en page des 3 pages de styles

--- a/Codepoursuite.html
+++ b/Codepoursuite.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="css/lib/normalize.css">
     <link rel="stylesheet" href="./css/mescss/menu.css">
     <link rel="stylesheet" href="./css/mescss/typography.css">
-    <link rel="stylesheet" href="./css/mescss/Codepoursuite.css">
+    <link rel="stylesheet" href="./css/mescss/style-mise-en-page.css">
+    <link rel="stylesheet" href="./css/mescss/style-graphique.css">
     <title>Code Poursuite</title>
 </head>
 <body>
@@ -162,11 +163,11 @@
 </div>
 
 <footer>
-    <div class="fond_footer"></div>
-    <div class="nom_prenom"><p>Nina BELLINO A1</p></div>
-    <div class="mailto"><a href="mailto:nina.bellin06@gmail"><p>nina.bellin06@gmail.com</p></a></div>
-    <div class="projet"><p>Projet réalisé dans le cadre d'un exercice pédagogique au département MMI de Montbéliard</p></div>
-    <div class="mmi_montbe"><a href="http://mmimontbeliard.com/"><p>MMI Montbéliard</p></a></div
+    <div class="fond_footer2"></div>
+    <div class="nom_prenom2"><p>Nina BELLINO A1</p></div>
+    <div class="mailto2"><a href="mailto:nina.bellin06@gmail"><p>nina.bellin06@gmail.com</p></a></div>
+    <div class="projet2"><p>Projet réalisé dans le cadre d'un exercice pédagogique au département MMI de Montbéliard</p></div>
+    <div class="mmi_montbe2"><a href="http://mmimontbeliard.com/"><p>MMI Montbéliard</p></a></div
 </footer>
 </body>
 </html>
