--- a/Pollution.html
+++ b/Pollution.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="css/lib/normalize.css">
     <link rel="stylesheet" href="./css/mescss/menu.css">
     <link rel="stylesheet" href="./css/mescss/typography.css">
-    <link rel="stylesheet" href="./css/mescss/Pollution.css">
+    <link rel="stylesheet" href="./css/mescss/style-mise-en-page.css">
+    <link rel="stylesheet" href="./css/mescss/style-graphique.css">
     <title>Pollution</title>
 </head>
 <body>
@@ -111,13 +112,11 @@
 </div>
 
 <footer>
-    <div class="fond_footer"></div>
-    <div class="nom_prenom">
-        <p>Nina BELLINO A1</p>
-    </div>
-    <div class="mailto"><a href="mailto:nina.bellin06@gmail"><p>nina.bellin06@gmail.com</p></a></div>
-    <div class="projet"><p>Projet réalisé dans le cadre d'un exercice pédagogique au département MMI de Montbéliard</p></div>
-    <div class="mmi_montbe"><a href="http://mmimontbeliard.com/"><p>MMI Montbéliard</p></a></div
+    <div class="fond_footer3"></div>
+    <div class="nom_prenom3"><p>Nina BELLINO A1</p></div>
+    <div class="mailto3"><a href="mailto:nina.bellin06@gmail"><p>nina.bellin06@gmail.com</p></a></div>
+    <div class="projet3"><p>Projet réalisé dans le cadre d'un exercice pédagogique au département MMI de Montbéliard</p></div>
+    <div class="mmi_montbe3"><a href="http://mmimontbeliard.com/"><p>MMI Montbéliard</p></a></div
 </footer>
 </body>
 </html>
