--- a/Solutions.html
+++ b/Solutions.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="css/lib/normalize.css">
     <link rel="stylesheet" href="./css/mescss/menu.css">
     <link rel="stylesheet" href="./css/mescss/typography.css">
-    <link rel="stylesheet" href="./css/mescss/Solutions.css">
+    <link rel="stylesheet" href="./css/mescss/style-mise-en-page.css">
+    <link rel="stylesheet" href="./css/mescss/style-graphique.css">
     <title>Solutions</title>
 </head>
 <body>
@@ -53,7 +54,7 @@
         Benjamin, il est primordial qu’il n’achète pas en plusieurs exemplaires ses
         équipements numériques.</p>
     <div class="parg2"><p>En même temps, ce serait une bonne initiative de fermer les onglets
-            d’internet qu'il n'utilise plus.</p></div>
+        d’internet qu'il n'utilise plus.</p></div>
     <div class="parg3"><p>Lorsqu’il quitte son domicile, il faudrait qu’il pense à éteindre sa box
         internet au lieu de la laisser en marche 24h/24. Alors que Benjamin achète
         en plusieurs exemplaires ses appareils, ils les jettent, ce qu’il ne
@@ -78,10 +79,10 @@
     <div class="list">
         <ul>
             <li>Acheter ses matériaux reconditionner, en cas de panne, il vaut mieux faire réparer ses appareils que d'en acheter
-            des nouveaux.</li>
+                des nouveaux.</li>
             <li>Recycle les appareils qui restent chez toi. D'après l'ADEME, il y aurait 54 à 113 millions de smartphones qui sont
-            stockés dans les placards. Tous ces appareils sont consistés de nombreux
-            matériaux qui pourrez être utilisés à la fabrication d'autres appareils.</li>
+                stockés dans les placards. Tous ces appareils sont consistés de nombreux
+                matériaux qui pourrez être utilisés à la fabrication d'autres appareils.</li>
             <li>Trier, garder que le nécessaire de ses e-mails</li>
             <li>Désactivez les fonctions Wifi, Bluetooth…,</li>
         </ul>
@@ -90,7 +91,7 @@
 
 <div class="par4">
     <div class="anciens-tels"><img src="img/Solutions/anciens-tels.jpg" height="281" width="375">
-    <p>Les téléphones qui restent dans tes tiroirs, Google Image</p></div>
+        <p>Les téléphones qui restent dans tes tiroirs, Google Image</p></div>
     <div class="list2">
         <ul>
             <li>Limite le nombre d'applications et de logiciels sur tes appareils.</li>
@@ -128,11 +129,11 @@
 </div>
 
 <footer>
-    <div class="fond_footer"></div>
-    <div class="nom_prenom"><p>Nina BELLINO A1</p></div>
-    <div class="mailto"><a href="mailto:nina.bellin06@gmail"><p>nina.bellin06@gmail.com</p></a></div>
-    <div class="projet"><p>Projet réalisé dans le cadre d'un exercice pédagogique au département MMI de Montbéliard</p></div>
-    <div class="mmi_montbe"><a href="http://mmimontbeliard.com/"><p>MMI Montbéliard</p></a></div
+    <div class="fond_footer4"></div>
+    <div class="nom_prenom4"><p>Nina BELLINO A1</p></div>
+    <div class="mailto4"><a href="mailto:nina.bellin06@gmail"><p>nina.bellin06@gmail.com</p></a></div>
+    <div class="projet4"><p>Projet réalisé dans le cadre d'un exercice pédagogique au département MMI de Montbéliard</p></div>
+    <div class="mmi_montbe4"><a href="http://mmimontbeliard.com/"><p>MMI Montbéliard</p></a></div
 </footer>
 </body>
 </html>
