--- a/autres-projets.html
+++ b/autres-projets.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="css/lib/normalize.css">
     <link rel="stylesheet" href="./css/mescss/menu.css">
     <link rel="stylesheet" href="./css/mescss/typography.css">
-    <link rel="stylesheet" href="./css/mescss/autres-projets.css">
+    <link rel="stylesheet" href="./css/mescss/style-mise-en-page.css">
+    <link rel="stylesheet" href="./css/mescss/style-graphique.css">
     <title>Autres projets</title>
 </head>
 <body>
@@ -78,11 +79,11 @@
 </div>
 
 <footer>
-    <div class="fond_footer"></div>
-    <div class="nom_prenom"><p>Nina BELLINO A1</p></div>
-    <div class="mailto"><a href="mailto:nina.bellin06@gmail"><p>nina.bellin06@gmail.com</p></a></div>
-    <div class="projet"><p>Projet réalisé dans le cadre d'un exercice pédagogique au département MMI de Montbéliard</p></div>
-    <div class="mmi_montbe"><a href="http://mmimontbeliard.com/"><p>MMI Montbéliard</p></a></div
+    <div class="fond_footer6"></div>
+    <div class="nom_prenom6"><p>Nina BELLINO A1</p></div>
+    <div class="mailto6"><a href="mailto:nina.bellin06@gmail"><p>nina.bellin06@gmail.com</p></a></div>
+    <div class="projet6"><p>Projet réalisé dans le cadre d'un exercice pédagogique au département MMI de Montbéliard</p></div>
+    <div class="mmi_montbe6"><a href="http://mmimontbeliard.com/"><p>MMI Montbéliard</p></a></div
 </footer>
 </body>
 </html>
